src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_asset_freeze.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                            ①          ②                              "
"                   Type  FRE...4A   FRO...4A                          "
"                         Account    Account                           "
"                   ──────────┬──────────┬───                          "
"                             │          │                             "
"                     AFZ     ●──────────▶    freeze                   "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
