src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_asset_opt_in.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                ①                           "
"                       Type  OPT...4A                       "
"                             Account                        "
"                       ──────────┬───                       "
"                                 │                          "
"                         AXF ↺opt-in…                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
