src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_keyreg_online.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                ①                           "
"                       Type  VAL...4A                       "
"                             Account                        "
"                       ──────────┬───                       "
"                                 │                          "
"                         KEY  ◉keyreg                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
