src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_payment.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                ①          ②                                    "
"                       Type  M3I...XM   KIZ...BQ                                "
"                             Account    Account                                 "
"                       ──────────┬──────────┬───                                "
"                                 │          │                                   "
"                         PAY     ●──────────▶    236.07A                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
