src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_mainnet_payment_close_remainder_recent.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                 ①          ②                                   "
"                        Type  SEN...4A   REC...TU                               "
"                              Account    Account                                "
"                        ──────────┬──────────┬───                               "
"                                  │          │                                  "
"                          PAY     ●──────────▶    5.00A                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
