src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_testnet_asset_clawback.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                  ①          ②                                  "
"                         Type  CLA...4A   REC...TU                              "
"                               Account    Account                               "
"                         ──────────┬──────────┬───                              "
"                                   │          │                                 "
"                           AXF     ●──────────▶    100                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
