src/widgets/graph/snapshots/lazylora__widgets__graph__tests__real_testnet_rekey.snap
---
source: src/widgets/graph/tests.rs
expression: terminal.backend()
---
"                                    ①          ②                                "
"                           Type  WK3...TM   QUA...SA                            "
"                                 Account    Account                             "
"                           ──────────┬──────────┬───                            "
"                                     │          │                               "
"                             PAY    ↺0A         │                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
